Change redirection since last one did not work

--- a/index.html
+++ b/index.html
@@ -1,5 +1,1 @@
-<frameset rows="100%">
-  <frameset cols="100%">
-    <frame src="http://github.com/juiiocesar" frameborder="0" scrolling="no">
-  </frameset>
-</frameset>
+<meta http-equiv="refresh" content="0; url=http://github.com/juiiocesar" />
