Test tweet idea

--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<meta http-equiv="refresh" content="0; url=http://github.com/juiiocesar" />
+<blockquote class="twitter-tweet tw-align-center"><p>These 101 companies are totally ROCKING social media: <a href="http://t.co/d0ZQR5C5ar" title="http://hub.am/YZZGgu">hub.am/YZZGgu</a> Wouldn't you say?</p>&mdash; HubSpot (@HubSpot) <a href="https://twitter.com/HubSpot/status/312028320004980736">March 14, 2013</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>  
