--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-just go to http://developer.julio.work 
+<script src="https://gist.github.com/JuIioCesar/cd81d59e2ed1b7f0cbe06d481a20144b.js"></script>
