--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<script src="https://gist.github.com/JuIioCesar/cd81d59e2ed1b7f0cbe06d481a20144b.js"></script>
+Hello friendly internet user,
+
+My name is Julio.
