--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-<img class="center fit" src="https://upload.wikimedia.org/wikipedia/en/5/5f/Original_Doge_meme.jpg" >    
+<img class="center fit" src="image.png" >    
 
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 <script type="text/javascript" language="JavaScript">
