--- a/index.html
+++ b/index.html
@@ -1,35 +1,11 @@
-<html><!DOCTYPE html>
 <html>
 <head>
-<style>
-  * {
-    padding: 0;
-    margin: 0;
-  }
-  .fit { /* set relative picture size */
-    max-width: 100%;
-    max-height: 100%;
-  }
-  .center {
-    display: block;
-    margin: auto;
-  }
-</style>
-</head>
+    <link rel="stylesheet" href="index.css">
+<head>
 <body>
-
-<img class="center fit" src="image.png" >    
-
-<script src="http://code.jquery.com/jquery-latest.js"></script>
-<script type="text/javascript" language="JavaScript">
-  function set_body_height() { // set body height = window height
-    $('body').height($(window).height());
-  }
-  $(document).ready(function() {
-    $(window).bind('resize', set_body_height);
-    set_body_height();
-  });
-</script>
-
+  <h1>julio work</h1>
+  <p>welcome to my website!</p>
+  <img class="circle" id="avatar" src="https://avatars2.githubusercontent.com/u/17010592?s=460&amp;v=4" />
+  <p>follow me on <a href="https://github.com/juiiocesar">Github</a></p>
 </body>
 </html>
